tdf#88023: Only warn about unavailable JRE once

The underlying design is that there's a single JavaInteractionHandler
instance owned by a JavaContext, and that JavaContext installed in
Desktop::Main (desktop/source/app/app.cxx).

This patch ensures that no additional JavaContext is created in
SfxOfficeDispatch::dispatch*() functions unless they are used without
preinstalled JavaContext.

Thanks to Stephan Bergmann for guidance!

Change-Id: I2569df221067a5b9bf1f6cd5d8f69b561316a170
Reviewed-on: https://gerrit.libreoffice.org/30529
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>